database.yml
# Viviana Velázquez 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apidb-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers: 
        - name: postgres-db
          image: postgres:latest
          env: # Variables de entornode la base de datos
            - name: POSTGRES_USER
              value: viviana
            - name: POSTGRES_PASSWORD
              value: viviana
            - name: POSTGRES_DB
              value: icecream
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432 # Puerto por defecto de postgres
      targetPort: 5432
